AJustar erros do SONAR - BASIS-246701